# chess-ai

./: .gitignore  index.html  package.json  style.css  tsconfig.json
src/: benchmark.ts  bitboard.test.ts  bitboard.ts  fen.ts  index.ts  matrix.ts  move-generator.test.ts  move-generator.ts  server.py
src/engines/: index.ts  mack1.ts  type.ts
src/engines/connect4/: game.nim  index.js  mcts.nim  play.nim  policy_network.nim  train.nim  value_network.nim
src/engines/connect4conv/: mcts.nim  self_play.nim  value_network.nim
src/engines/mack1/: bitboard.py  constants.py  fen.py  game.py  index.py  index.ts
src/engines/mack2/: .gitignore  constants.ts  evolve.js  extract-weights.ts  generate-networks.ts  index.py  index.ts  input.py  input.ts  output-layer-mapping.ts  output.ts  output_layer_mapping.py  pairings.ts  play.ts  readme.md  train.ts  types.ts  worker.ts
src/engines/mack3/: bitboard.nim  game.nim  game.test.py  index.py  mcts.nim  nim_bitboard.nim  nim_constants.nim  nim_game.nim  py_constants.py  py_fen.py  py_game.py
src/engines/mack4/: bitboard.jl  constants.jl  game.jl  test.py
src/engines/mack5/: constants.nim  game.nim  index.py  mcts  mcts.nim
src/engines/mack7/: Cargo.toml  policy_network.py
src/engines/mack7/src/: bitboard.rs  chess_move.rs  constants.rs  direction.rs  game.rs  main.rs  mcts.rs  piece.rs  policy_network.rs  position.rs  train.rs  value_network.rs
src/py/: bitboard.py  constants.py  fen.py  game.py  game.test.py
src/scripts/: fen.ts  index.ts  move-generator.ts
src/static/: style.css
src/templates/: index.html
(+31 files in other folders)
