[package]
name = "mack7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
ndarray = "0.15.4"
neuronika = { git = "https://github.com/neuronika/neuronika", features = ["serialize"] }
rand = "0.8.4"
rayon = "1.5"
serde = "1.0.136"
serde_json = "1.0.78"
